# TaskFastAPI

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  env.py  pyproject.toml
app/: database.py  main.py
app/models/: project.py  task.py
app/routers/: project.py  task.py  user.py
app/schemas/: project.py  task.py  user.py
tests/: test_users.py
